force-app/main/default/objects/product__c/product__c.object-meta.xml
<CustomObject>
    <label>product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>