force-app/main/default/objects/product__c/fields/cash__c.field-meta.xml
<CustomField>
    <fullName>cash__c</fullName>
    <label>cash</label>
    <summaryFilterItems>
        <field>order__c.Payment_Mode__c</field>
        <operation>equals</operation>
        <value>Cash</value>
    </summaryFilterItems>
    <summaryForeignKey>order__c.ProductName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>