force-app/main/default/objects/product__c/fields/Estimation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Cost__c</fullName>
    <label>Estimation Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>