force-app/main/default/objects/product__c/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    <formula>Estimation_Cost__c  -  Total_cost_for_Orders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>