force-app/main/default/objects/product__c/fields/Sold_Out__c.field-meta.xml
<CustomField>
    <fullName>Sold_Out__c</fullName>
    <label>Sold Out</label>
    <summaryForeignKey>order__c.ProductName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>