force-app/main/default/objects/product__c/fields/Total_cost_for_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_cost_for_Orders__c</fullName>
    <label>Total cost for Orders</label>
    <summarizedField>order__c.Amount__c</summarizedField>
    <summaryForeignKey>order__c.ProductName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>